--- a/style.css
+++ b/style.css
@@ -1,12 +1,41 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 4fr;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
 
 .dashboard {
   grid-column: span 1;
   grid-row: span 2;
+  background-color: #4338ca;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 5fr 2fr 4fr;
+  color: white;
+  gap: 15px;
+  padding: 10px;
+  justify-items: center;
+}
+
+.dash-links {
+  display: grid;
+  justify-items: center;
+}
+
+.dash-settings {
+  display: grid;
+  justify-items: center;
 }
 
 .header {
@@ -14,13 +43,22 @@
   grid-row: span 1;
   display: grid;
   grid-template-rows: 1fr 1fr;
+  background-color: white;
+  padding: 10px;
+}
+
+.header-top,
+.header-bottom {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .card {
-  height: 200px;
-  width: 400px;
+  /* width: 100px;
+  height: 100px; */
   background-color: blue;
   border: 1px solid black;
+  padding: 15px;
 }
 
 .main {
@@ -28,16 +66,30 @@
   grid-row: 2/3;
   display: grid;
   grid-template-columns: 3fr 1fr;
+  background-color: #bfdbfe;
+  padding: 10px;
+  gap: 5px;
 }
 
-.projects {
+.project {
   grid-column: 1/2;
+  grid-row: 1/3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /* grid-template-rows: repeat(auto-fill, minmax(150px 1fr)); */
+  gap: 5px;
 }
 
-.announcements {
-  grid-column: 2/3;
+.project .main-title {
+  grid-column: span 2;
 }
 
+.main-title {
+  text-align: center;
+}
+
+.announcements,
 .trending {
+  padding: 10px;
   grid-column: 2/3;
 }
