Structure header, add in some style and coloring to header and dashboard

--- a/style.css
+++ b/style.css
@@ -10,11 +10,6 @@ body {
   margin: 5px;
 }
 
-.dash-head p {
-  margin: 5px;
-  text-align: left;
-}
-
 .dash-head img {
   height: 50px;
   width: 50px;
@@ -32,8 +27,8 @@ body {
   width: 40px;
 }
 
-.dash-row p {
-  margin: 5px;
+.dash-row p,
+.dash-head p {
   text-align: left;
 }
 
@@ -41,7 +36,7 @@ body {
   display: grid;
   grid-template-columns: minmax(225px, 1fr) 4fr;
   grid-template-rows: 1fr 4fr;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Helvetica, Verdana, Tahoma, sans-serif;
   position: absolute;
   top: 0;
   left: 0;
@@ -52,16 +47,16 @@ body {
 .dashboard {
   grid-column: span 1;
   grid-row: span 2;
-  background-color: #4338ca;
+  background-color: #c4b5fd;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 5fr 2fr 4fr;
+  grid-template-rows: 10px 1fr 5fr 2fr 4fr;
   color: white;
   gap: 15px;
   padding: 10px;
   justify-items: center;
-  border-radius: 5px;
   border: 3px solid black;
+  border-block: 0px;
 }
 
 .dash-links,
@@ -78,21 +73,93 @@ body {
   grid-column-start: 2;
   grid-row: span 1;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 75px 100px;
   background-color: white;
-  padding: 10px;
+  padding-inline: 25px;
+  padding-block: 10px;
+  border-bottom: 2px solid black;
 }
 
-.header-top,
-.header-bottom {
+.header-top {
   display: flex;
-  justify-content: space-evenly;
+  align-items: center;
+  margin-top: -50px;
+  gap: 25px;
+  justify-content: center;
+  font-size: large;
+  font-weight: 700;
+  padding-top: 50px;
+}
+
+.header .icon {
+  height: 25px;
+  width: 25px;
+}
+
+.header-bottom {
+  display: grid;
+  align-items: center;
+  gap: 25px;
+  grid-template-columns: 1fr 9fr 1fr 1fr 1fr;
+}
+
+.greet {
+  display: grid;
+}
+
+.small-greet {
+  font-size: small;
+  font-weight: 700;
+  margin-bottom: -10px;
+}
+
+.big-greet {
+  font-size: large;
+  font-weight: 700;
+}
+
+.header-top img {
+  height: 85px;
+  width: 85px;
+  border-radius: 50%;
+}
+
+.header-bottom img {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
+
+btn {
+  background-color: #164e63;
+  padding: 10px;
+  width: 90px;
+  text-align: center;
+  border-radius: 5%;
+  /* border: 1px solid black; */
+  font-weight: 900;
+  color: white;
+  box-shadow: 2px 2px 8px gray;
+}
+
+.search {
+  flex: 0.9;
+  display: flex;
+  gap: 5px;
+  align-items: flex-start;
+}
+
+.search-bar {
+  background-color: aliceblue;
+  border: 2px solid black;
+  border-radius: 25px;
+  flex: 0.9;
 }
 
 .card {
   /* width: 100px;
   height: 100px; */
-  background-color: blue;
+  background-color: #0284c7;
   border: 1px solid black;
   padding: 15px;
 }
