--- a/style.css
+++ b/style.css
@@ -47,15 +47,15 @@ body {
 .dashboard {
   grid-column: span 1;
   grid-row: span 2;
-  background-color: #c4b5fd;
+  background-color: #2563eb;
+  color: white;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 10px 1fr 5fr 2fr 4fr;
-  color: white;
   gap: 15px;
   padding: 10px;
   justify-items: center;
-  border: 3px solid black;
+  border: 5px solid black;
   border-block: 0px;
 }
 
@@ -77,7 +77,7 @@ body {
   background-color: white;
   padding-inline: 25px;
   padding-block: 10px;
-  border-bottom: 2px solid black;
+  border-bottom: 5px solid black;
 }
 
 .header-top {
@@ -139,7 +139,9 @@ btn {
   /* border: 1px solid black; */
   font-weight: 900;
   color: white;
-  box-shadow: 2px 2px 8px gray;
+  border: 2px solid gray;
+  border-radius: 5px;
+  /* box-shadow: 2px 2px 8px gray; */
 }
 
 .search {
@@ -157,11 +159,59 @@ btn {
 }
 
 .card {
-  /* width: 100px;
-  height: 100px; */
-  background-color: #0284c7;
-  border: 1px solid black;
-  padding: 15px;
+  background-color: #f9fafb;
+  border-left: 8px solid #0d9488;
+  padding-inline: 10px;
+  border-radius: 5px;
+  display: grid;
+  grid-template-rows: 30px 50px 1fr;
+  box-shadow: 0px 3px 5px black;
+}
+
+.announce-card,
+.trend-card {
+  background-color: #f9fafb;
+  border-radius: 5px;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  border: 5px solid #0d9488;
+  border-radius: 10px;
+  box-shadow: 2px 3px 3px black;
+}
+
+.announce-card p,
+.trend-card p {
+  border-bottom: 4px solid gray;
+  box-shadow: 0px 3px 3px black;
+  border-top: 2px solid gray;
+  border-radius: 10px;
+  text-align: center;
+  margin-block: 4px;
+  margin-inline: 2px;
+  padding: 5px;
+  font-weight: 700;
+}
+
+.card .symbols {
+  display: flex;
+  gap: 5px;
+  justify-content: flex-end;
+  margin: 15px;
+  grid-row: 3/4;
+}
+.card .symbols img {
+  height: 20px;
+  width: 20px;
+}
+
+.card .title {
+  font-weight: 700;
+  grid-row: 1/2;
+}
+
+.card p {
+  grid-row: 2/3;
 }
 
 .main {
@@ -171,7 +221,7 @@ btn {
   grid-template-columns: 3fr 1fr;
   background-color: #bfdbfe;
   padding: 10px;
-  gap: 5px;
+  gap: 10px;
 }
 
 .project {
@@ -179,8 +229,8 @@ btn {
   grid-row: 1/3;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  /* grid-template-rows: repeat(auto-fill, minmax(150px 1fr)); */
-  gap: 5px;
+  gap: 15px;
+  margin-bottom: 15px;
 }
 
 .project .main-title {
@@ -189,6 +239,8 @@ btn {
 
 .main-title {
   text-align: center;
+  font-weight: 700;
+  font-size: larger;
 }
 
 .announcements,
