--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 .dashboard {
   grid-column: span 1;
   grid-row: span 2;
-  background-color: #2563eb;
+  background-color: #0369a1;
   color: white;
   display: grid;
   grid-template-columns: 1fr;
@@ -55,7 +55,7 @@ body {
   gap: 15px;
   padding: 10px;
   justify-items: center;
-  border: 5px solid black;
+  border: 5px solid #374151;
   border-block: 0px;
 }
 
@@ -77,7 +77,8 @@ body {
   background-color: white;
   padding-inline: 25px;
   padding-block: 10px;
-  border-bottom: 5px solid black;
+  border-bottom: 5px solid #374151;
+  color: #374151;
 }
 
 .header-top {
@@ -122,12 +123,14 @@ body {
   height: 85px;
   width: 85px;
   border-radius: 50%;
+  border: 3px solid #374151;
 }
 
 .header-bottom img {
   height: 100px;
   width: 100px;
   border-radius: 50%;
+  border: 3px solid #374151;
 }
 
 btn {
@@ -178,6 +181,7 @@ btn {
   border: 5px solid #0d9488;
   border-radius: 10px;
   box-shadow: 2px 3px 3px black;
+  gap: 5px;
 }
 
 .announce-card p,
@@ -197,8 +201,9 @@ btn {
   display: flex;
   gap: 5px;
   justify-content: flex-end;
-  margin: 15px;
+  margin: 10px;
   grid-row: 3/4;
+  align-items: flex-end;
 }
 .card .symbols img {
   height: 20px;
@@ -219,9 +224,10 @@ btn {
   grid-row: 2/3;
   display: grid;
   grid-template-columns: 3fr 1fr;
-  background-color: #bfdbfe;
+  background-color: #60a5fa;
   padding: 10px;
   gap: 10px;
+  height: 100%;
 }
 
 .project {
@@ -229,7 +235,8 @@ btn {
   grid-row: 1/3;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 15px;
+  grid-template-rows: 50px repeat(auto-fit, 150px);
+  gap: 30px;
   margin-bottom: 15px;
 }
 
@@ -241,10 +248,24 @@ btn {
   text-align: center;
   font-weight: 700;
   font-size: larger;
+  color: #374151;
 }
 
 .announcements,
 .trending {
   padding: 10px;
   grid-column: 2/3;
+}
+
+.trending img {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+
+.trending .row {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
